// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Basic smoke test > Should cast default attributes to attributes 1`] = `
"<section>
  <h1>Include</h1>
  <article>
          Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dignissimos fugiat inventore laborum maiores molestiae neque quia quo unde veniam?
      </article>
</section>
<section>
  <h1>Embed</h1>
  <article>
        Lorem ipsum dolor sit amet.
    <button class=\\"button--primary\\">Nested include</button>
          IT WORKS!
        </article>
</section>
<section>
  <h1></h1>
  <article>
          Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dignissimos fugiat inventore laborum maiores molestiae neque quia quo unde veniam?
      </article>
</section>
<section>
  <h1>Relative include</h1>
  <article>
          Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dignissimos fugiat inventore laborum maiores molestiae neque quia quo unde veniam?
      </article>
</section>
<h2>SDC</h2>
<p>Card</p>
<div>atom badge from nested dir 🙌</div>
<button>nested button 🙌</button>
<button>SDC</button>
<button>included button 👈️</button>
<h2>Include card</h2>
<p>🏆️ winning</p>
<div>atom badge from nested dir 🙌</div>
<button>nested button 🙌</button>
<div  class=\\"ponies\\">hey there</div>
  All received
  pony town
"
`;

exports[`Basic smoke test > Should recognise default Drupal functions 1`] = `
"
<p>Functions work</p>"
`;

exports[`Basic smoke test > Should support default attributes as a map 1`] = `
"<section>
  <h1>Include</h1>
  <article>
          Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dignissimos fugiat inventore laborum maiores molestiae neque quia quo unde veniam?
      </article>
</section>
<section>
  <h1>Embed</h1>
  <article>
        Lorem ipsum dolor sit amet.
    <button class=\\"button--primary\\">Nested include</button>
          IT WORKS!
        </article>
</section>
<section>
  <h1></h1>
  <article>
          Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dignissimos fugiat inventore laborum maiores molestiae neque quia quo unde veniam?
      </article>
</section>
<section>
  <h1>Relative include</h1>
  <article>
          Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dignissimos fugiat inventore laborum maiores molestiae neque quia quo unde veniam?
      </article>
</section>
<h2>SDC</h2>
<p>Card</p>
<div>atom badge from nested dir 🙌</div>
<button>nested button 🙌</button>
<button>SDC</button>
<button>included button 👈️</button>
<h2>Include card</h2>
<p>🏆️ winning</p>
<div>atom badge from nested dir 🙌</div>
<button>nested button 🙌</button>
<div  class=\\"ponies\\">hey there</div>
  All received
  pony town
"
`;

exports[`Basic smoke test > Should support global context and functions 1`] = `
"<section>
  <h1>Include</h1>
  <article>
          Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dignissimos fugiat inventore laborum maiores molestiae neque quia quo unde veniam?
      </article>
</section>
<section>
  <h1>Embed</h1>
  <article>
        Lorem ipsum dolor sit amet.
    <button class=\\"button--primary\\">Nested include</button>
          IT WORKS!
        </article>
</section>
<section>
  <h1></h1>
  <article>
          Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dignissimos fugiat inventore laborum maiores molestiae neque quia quo unde veniam?
      </article>
</section>
<section>
  <h1>Relative include</h1>
  <article>
          Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dignissimos fugiat inventore laborum maiores molestiae neque quia quo unde veniam?
      </article>
</section>
<h2>SDC</h2>
<p>Card</p>
<div>atom badge from nested dir 🙌</div>
<button>nested button 🙌</button>
<button>SDC</button>
<button>included button 👈️</button>
<h2>Include card</h2>
<p>🏆️ winning</p>
<div>atom badge from nested dir 🙌</div>
<button>nested button 🙌</button>
<div >hey there</div>
  All received
  pony town
"
`;

exports[`Basic smoke test > Should support import _self for recursive macros 1`] = `
"

<nav>
  <ul>
      <li><a href=\\"/home\\">Home</a></li>

      <li><a href=\\"/about\\">About</a></li>

  </ul>
</nav>
"
`;

exports[`Basic smoke test > Should support includes 1`] = `
"<section>
  <h1>Include</h1>
  <article>
          Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dignissimos fugiat inventore laborum maiores molestiae neque quia quo unde veniam?
      </article>
</section>
<section>
  <h1>Embed</h1>
  <article>
        Lorem ipsum dolor sit amet.
    <button class=\\"button--primary\\">Nested include</button>
          IT WORKS!
        </article>
</section>
<section>
  <h1></h1>
  <article>
          Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dignissimos fugiat inventore laborum maiores molestiae neque quia quo unde veniam?
      </article>
</section>
<section>
  <h1>Relative include</h1>
  <article>
          Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dignissimos fugiat inventore laborum maiores molestiae neque quia quo unde veniam?
      </article>
</section>
<h2>SDC</h2>
<p>Card</p>
<div>atom badge from nested dir 🙌</div>
<button>nested button 🙌</button>
<button>SDC</button>
<button>included button 👈️</button>
<h2>Include card</h2>
<p>🏆️ winning</p>
<div>atom badge from nested dir 🙌</div>
<button>nested button 🙌</button>
<div >hey there</div>
  All received
  pony town
"
`;

exports[`Basic smoke test > Should support macros 1`] = `
"<ul>
      <li><a href=\\"/home\\">Home</a>
      </li>

      <li><a href=\\"/about\\">About</a>
          <ul>
                      <li><a href=\\"/contact\\">Contact</a>
      </li>

              </ul>
      </li>

</ul>
"
`;

exports[`Basic smoke test > Should support nested SDC 1`] = `
"<section>
  <h1>Include</h1>
  <article>
          Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dignissimos fugiat inventore laborum maiores molestiae neque quia quo unde veniam?
      </article>
</section>
<section>
  <h1>Embed</h1>
  <article>
        Lorem ipsum dolor sit amet.
    <button class=\\"button--primary\\">Nested include</button>
          IT WORKS!
        </article>
</section>
<section>
  <h1></h1>
  <article>
          Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dignissimos fugiat inventore laborum maiores molestiae neque quia quo unde veniam?
      </article>
</section>
<section>
  <h1>Relative include</h1>
  <article>
          Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dignissimos fugiat inventore laborum maiores molestiae neque quia quo unde veniam?
      </article>
</section>
<h2>SDC</h2>
<p>Card</p>
<div>atom badge from nested dir 🙌</div>
<button>nested button 🙌</button>
<button>SDC</button>
<button>included button 👈️</button>
<h2>Include card</h2>
<p>🏆️ winning</p>
<div>atom badge from nested dir 🙌</div>
<button>nested button 🙌</button>
<div >hey there</div>
  All received
  pony town
"
`;

exports[`Basic smoke test > Should support variables 1`] = `
"<section>
  <h1>Include</h1>
  <article>
          Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dignissimos fugiat inventore laborum maiores molestiae neque quia quo unde veniam?
      </article>
</section>
<section>
  <h1>Embed</h1>
  <article>
        Lorem ipsum dolor sit amet.
    <button class=\\"button--primary\\">Nested include</button>
          IT WORKS!
        </article>
</section>
<section>
  <h1>Pickle Fixie</h1>
  <article>
          Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dignissimos fugiat inventore laborum maiores molestiae neque quia quo unde veniam?
      </article>
</section>
<section>
  <h1>Relative include</h1>
  <article>
          Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dignissimos fugiat inventore laborum maiores molestiae neque quia quo unde veniam?
      </article>
</section>
<h2>SDC</h2>
<p>Card</p>
<div>atom badge from nested dir 🙌</div>
<button>nested button 🙌</button>
<button>SDC</button>
<button>included button 👈️</button>
<h2>Include card</h2>
<p>🏆️ winning</p>
<div>atom badge from nested dir 🙌</div>
<button>nested button 🙌</button>
<div >hey there</div>
  All received
  pony town
"
`;
